Bug 1160102 - use VsyncDisplay interface to turn on/off vsync. r=kats